--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
 			</div>
 			<div class=row>
 				<div class=col-md-7>
-					<div class=main-slider>
+					<div class="main-slider overflow">
 						<div class=main-slider-item>
 							<img src=assets/img/main-1.png alt>
 						</div>
@@ -171,6 +171,34 @@
 					<div class=styles-block>
 						<img src=assets/img/styles-4.jpg alt>
 						<h4>Ручкой</h4>
+						<a href="#">Подробнее</a>
+					</div>
+				</div>
+				<div class="hidden-lg hidden-md hidden-sm hidden-xs styles-2">
+					<div class=styles-block>
+						<img src=assets/img/styles-5.jpg alt>
+						<h4>Пастелью</h4>
+						<a href="#">Подробнее</a>
+					</div>
+				</div>
+				<div class="hidden-lg hidden-md hidden-sm hidden-xs styles-2">
+					<div class=styles-block>
+						<img src=assets/img/styles-6.jpg alt>
+						<h4>Поп-арт</h4>
+						<a href="#">Подробнее</a>
+					</div>
+				</div>
+				<div class="hidden-lg hidden-md hidden-sm hidden-xs styles-2">
+					<div class=styles-block>
+						<img src=assets/img/styles-7.png alt>
+						<h4>Фотомозаика</h4>
+						<a href="#">Подробнее</a>
+					</div>
+				</div>
+				<div class="hidden-lg hidden-md hidden-sm hidden-xs styles-2">
+					<div class=styles-block>
+						<img src=assets/img/styles-8.jpg alt>
+						<h4>Шарж</h4>
 						<a href="#">Подробнее</a>
 					</div>
 				</div>
